--- a/src/app/carros/carroslist/carroslist.component.scss
+++ b/src/app/carros/carroslist/carroslist.component.scss
@@ -1,5 +1,5 @@
 table td{
-    width: 100%;
+    width: 50%;
     background-color: yellow;
     border: solid 3px black;
     text-align: center;
@@ -8,20 +8,21 @@ table td{
 table {
     margin-top: 7%;
     border-radius: 3px;
-    margin-left:25%;
-    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
     border-spacing: 0;
-    border: solid 10px black;
+    border: solid 2px black;
     border-radius: 10px;
 }
 table th{
-    width: 100%;
+    text-align: center;
     color: white;
     background-color:black;
-    border: solid 5px black;
+    border: solid 2px black;
 }
 *{
-    font-size: 100px;
+    font-size: 22.4px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    background-color: antiquewhite;
+    background-color: rgb(111, 111, 110);
 }
