--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,2 +1,20 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="/menu">Listas</a>
+          </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/admin/carros">Carros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/livros">Livros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/pessoas">Pessoas</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
