--- a/src/app/carros/carrosdetails/carrosdetails.component.html
+++ b/src/app/carros/carrosdetails/carrosdetails.component.html
@@ -1,1 +1,7 @@
-<p>carrosdetails works!</p>
+Nome:
+<input type="text" [(ngModel)]="carro.nome" />
+
+Ano:
+<input type="number" [(ngModel)]="carro.ano" />
+
+<button (click)="salvar()">Salvar</button>
