--- a/src/app/carros/carroslist/carroslist.component.scss
+++ b/src/app/carros/carroslist/carroslist.component.scss
@@ -1,16 +1,18 @@
 table td{
     width: 50%;
     background-color: yellow;
-    border: solid 3px black;
     text-align: center;
     
+}
+tbody{
+    width:400px
 }
 table {
     margin-top: 7%;
     border-radius: 3px;
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
+    width: 800px;
     border-spacing: 0;
     border: solid 2px black;
     border-radius: 10px;
@@ -19,10 +21,18 @@ table th{
     text-align: center;
     color: white;
     background-color:black;
-    border: solid 2px black;
+    border-top: solid 3px black;
+}
+table tr{
+    border-top: solid 3px black;
+
 }
 *{
     font-size: 22.4px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(111, 111, 110);
+    background-color: yellow;
+}
+input{
+    width: 82px;
+    background-color: gray;
 }
