--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="/menu">Listas</a>
+            <a class="nav-link" href="/login">Listas</a>
           </li>
         <li class="nav-item active">
           <a class="nav-link" href="/admin/carros">Carros</a>
